The following changes were made in 4.5.5 since 4.5.3 release:

  * _[i,o]streambuf_iterator.h: correction of the missing iterator base class (Thanks Tanaka)
  
  ----
  

  * _string.h: correction of the replace implementation badling form for self referencing 
               (thanks Francois Dumont)

  ----

  * _string.h .c: Modifiction of the _M_copy method to _M_move as basic_string do not correctly handled
                  self referecing (thanks Tanaka).
             
  ----
  
  * como 4.3.0 on linux support (thanks Synge Todo and Karel Gardas)
  
  ----
  
  * Quazy-leak patch: make memory detection tools happier, option _STLP_LEAKS_PEDANTIC in _site_config.h.
                  (thanks Petr Ovchenkov)
  
  ----
  
  * Support of the Linux Intel C++ support (thanks Blaine Kubesh)
  
  ----

  * FreeBSD support update (thanks Guy Middleton).
  
  ----

  * codecvt.cpp: charcode correction in the do_in method (thanks J Hamilton report)

  ----

  * _valarray.h: Correction of the missing explicit keyword in front of one of the valarray constructors
                 (thanks Stephen Clamage)

  ----

  * stdexcept: Correction of the mysterious 50 messages from VC7.Net (thanks Krish S)

  ----

  * _vector.h: implementation of the max_size method based on the allocator::max_size method 
               (thanks Gennaro Prota from the boost forum).

  ----

  * _vector.c: add of the standard length_error exception to the reserve method (thanks Steven Youngs).

  ----

  * _alloc.h: add of a check of the number of element require to allocator::allocate to avoid a possible
              size_type overflow (thanks Steven Youngs).

  ----

  * _istream.h: move of the ws implementation within the header to avoid undefined symbol
                under NO_CUSTOM_IO mode (thanks Ulrich Eckhardt)

  ----

  * ctype.cpp : charcode correction (thanks Markus Stier reports and Alberto Barbati correction)

  ----
